cluster/apps/obsidian/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: obsidian
spec:
  selector:
    app: obsidian
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
