cluster/apps/obsidian/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-tailscale
  namespace: obsidian
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - obsidian
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian
                port:
                  number: 3000
